# phonetic

./: .travis.yml  README.MD  phonetic.opam
src/: doubleMetaphone.ml  dune
test/: bench.ml  dune  test.ml  test_utils.ml
